--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,37 @@
-aiogram~=3.21.0
-python-dotenv~=1.1.1
-SQLAlchemy~=2.0.43
-fastapi~=0.116.2
-uvicorn~=0.35.0
+aiofiles==24.1.0
+aiogram==3.21.0
+aiohappyeyeballs==2.6.1
 aiohttp==3.12.14
+aiosignal==1.4.0
+aiosqlite==0.21.0
+annotated-types==0.7.0
+anyio==4.10.0
+attrs==25.3.0
+black==25.1.0
+certifi==2025.8.3
+click==8.2.1
+colorama==0.4.6
+fastapi==0.116.2
+frozenlist==1.7.0
+greenlet==3.2.4
+h11==0.16.0
+idna==3.10
+isort==6.0.1
+load-dotenv==0.1.0
+magic-filter==1.0.12
+multidict==6.6.4
+mypy_extensions==1.1.0
+packaging==25.0
+pathspec==0.12.1
+platformdirs==4.4.0
+propcache==0.3.2
+pydantic==2.11.7
+pydantic_core==2.33.2
+python-dotenv==1.1.1
+sniffio==1.3.1
+SQLAlchemy==2.0.43
+starlette==0.48.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+uvicorn==0.35.0
+yarl==1.20.1
